--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@hapi/joi": "^15.0.3",
     "apollo-server-express": "^2.6.1",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^3.4.1",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-session": "^1.16.1",
     "graphql": "^14.3.1",
     "mongoose": "^5.5.12"
   },
